umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_cis_trans_2e-hexa-2-4-diene-partial.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h#v3" "C#h#v3" "C#h#v3" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 "2#C1"] [2 3 :single] [3 4 :double] [4 5 :single]]
      :stereo-bonds [{:ligands [0 [:h 1] 3 [:h 2]] :site 1 :type :e}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h#v3" "C#h#v3" "C#h#v3" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 "2#C1"] [2 3 :single] [3 4 :double] [4 5 :single]]
      :stereo-bonds [{:ligands [0 [:h 1] 3 [:h 2]] :site 1 :type :e}]}
    :success true}}
