umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_cis_trans_difluorobut-2-ene-unknown.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#v4" "F#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :double] [3 4 :single] [3 5 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#v4" "F#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :double] [3 4 :single] [3 5 :single]]}
    :success true}}
