umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_cis_trans_e-2-3-difluorobut-2-ene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#v4" "F#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 "2#C0"] [3 4 :single] [3 5 :single]]
      :stereo-bonds [{:attrs :z :ligands [0 2 4 5] :site 2}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#v4" "F#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 "2#C0"] [3 4 :single] [3 5 :single]]
      :stereo-bonds [{:attrs :z :ligands [0 2 4 5] :site 2}]}
    :success true}}
