umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_cis_trans_e-azomethane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "N#n#v3" "N#n#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 "2#C1"] [2 3 :single]]
      :stereo-bonds [{:ligands [0 [:lp 1] 3 [:lp 2]] :site 1 :type :e}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "N#n#v3" "N#n#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 "2#C1"] [2 3 :single]]
      :stereo-bonds [{:ligands [0 [:lp 1] 3 [:lp 2]] :site 1 :type :e}]}
    :success true}}
