umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_cis_trans_z-2-fluorobut-2-ene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 "2#C1"] [3 4 :single]]
      :stereo-bonds [{:ligands [0 2 4 [:h 3]] :site 2 :type :e}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "F#n3#v" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 "2#C1"] [3 4 :single]]
      :stereo-bonds [{:ligands [0 2 4 [:h 3]] :site 2 :type :e}]}
    :success true}}
